--- a/bedrock/security/templates/security/bug-bounty/faq.html
+++ b/bedrock/security/templates/security/bug-bounty/faq.html
@@ -188,7 +188,7 @@
             recent version of the product for which you're reporting the bug. (For
             a list of supported operating systems and hardware configurations see
             the system requirements for <a href="{{ url('firefox.sysreq') }}">Firefox</a>,
-            <a href="https://support.mozilla.org/kb/will-firefox-work-my-mobile-device">
+            <a href="{{ firefox_url('android', 'sysreq') }}">
             Firefox for Android</a>, and <a href="{{ url('thunderbird.sysreq') }}">
             Thunderbird</a>.)</p>
         </dd>
