--- a/bedrock/firefox/templates/firefox/new.html
+++ b/bedrock/firefox/templates/firefox/new.html
@@ -127,7 +127,7 @@
             {% endif %}
             <li class="hide-for-refresh"><a href="{{ url('firefox.os.index') }}">{{_('Learn about Firefox OS')}}</a></li>
             {% endif %}
-            <li><a href="{{ url('firefox.all') }}#{{ LANG }}">{{_('Download a fresh copy')}}</a></li>
+            <li><a href="{{ firefox_url('desktop', 'all') }}#{{ LANG }}">{{_('Download a fresh copy')}}</a></li>
           </ul>
         </div>
         <div class="android-latest-links-wrapper latest-links-wrapper">
