Bug 1236450 - change iOS promo background color

--- a/media/css/mozorg/home/home-promo.less
+++ b/media/css/mozorg/home/home-promo.less
@@ -1087,7 +1087,7 @@ html[lang|="en"] {
 /****************************************************************************/
 // Firefox iOS
 .promo-large-portrait.firefox-ios {
-    background: #00659a; // dark blue
+    background: #e55525; // orange
 
     h2 {
         padding-top: 180px;
