--- a/bedrock/firefox/templates/firefox/australis/fx36/tour.html
+++ b/bedrock/firefox/templates/firefox/australis/fx36/tour.html
@@ -2,24 +2,35 @@
  # License, v. 2.0. If a copy of the MPL was not distributed with this
  # file, You can obtain one at http://mozilla.org/MPL/2.0/. #}
 
-{% extends "firefox/australis/fx36/tour-base.html" %}
+{% extends "firefox/base.html" %}
 
 {% set_lang_files "firefox/australis/fx36_tour" %}
 
-{% block telemetry_id %}firstrun-tour-36-release{% endblock %}
+{% block extra_meta %}<meta name="robots" content="noindex">{% endblock %}
 
-{% block page_css %}
-  {% stylesheet 'firefox_fx36_firstrun' %}
+{#- This will appear as <meta property="og:title"> which can be used for social share -#}
+{% block page_og_title %}
+  {{_('Choose the independent browser')}}
 {% endblock %}
 
-{% block js %}
-  {% javascript 'firefox_fx36_firstrun' %}
+{#- This will appear as <meta property="og:description"> which can be used for social share -#}
+{% block page_og_desc %}
+  {{_('Firefox is non-profit, non-corporate, non-compromised. Choosing Firefox isn’t just choosing a browser. It’s a vote for personal freedom.')}}
 {% endblock %}
+
+{#- Override <meta property="og:url"> for social share -#}
+{% block page_og_url %}{{ url('firefox') }}{% endblock %}
 
 {% block optimizely %}
-  {% if waffle.switch('firefox-firstrun-optimizely') %}
+  {% if waffle.switch('firefox-tour-optimizely') %}
     {% include 'includes/optimizely.html' %}
   {% endif %}
+{% endblock %}
+
+{% block body_class %}sky{% endblock %}
+
+{% block page_css %}
+  {% stylesheet 'firefox_tour' %}
 {% endblock %}
 
 {% block string_data %}
@@ -41,31 +52,46 @@ data-step3="{{ _('3/4') }}"
 data-step4="{{ _('4/4') }}"
 {% endblock %}
 
-{% block main_heading %}
-  <header role="banner">
-    <div class="logo"></div>
-    <div class="stage">
-      <h1>{{ _('Welcome to Firefox') }}</h1>
-      <p>{{ _('Committed to you, your privacy and an open Web.') }}</p>
+{% block site_header %}
+  <header id="masthead">
+    <div id="tabzilla">
+      <a href="{{ url('mozorg.home') }}">Mozilla</a>
     </div>
+    {% block site_header_nav %}{% endblock %}
+    {% block site_header_logo %}{% endblock %}
+    {% block breadcrumbs %}{% endblock %}
   </header>
 {% endblock %}
 
-{% block promo_content %}
-  <article class="promo">
-    <div class="promo-copy">
-      <h2>{{ _('Get to know Hello') }}</h2>
-      <p>{{ _('Firefox Hello is the easiest way to connect with friends and family for free over video.') }}</p>
-      <a id="learn-more" href="{{ url('firefox.hello') }}" class="button-flat">{{ _('Learn more') }}</a>
-      <p id="powered-by">{{ _('Powered by %s')|format(high_res_img('firefox/hello/tef-logo.png', {'alt': 'Telefonica', 'width': '106', 'height': '29'})) }}</p>
-    </div>
-    <div class="promo-media">
-      {% include 'firefox/includes/hello-animation.html' %}
-    </div>
-  </article>
-{% endblock %}
+{% block content %}
+  <article id="tour-page" data-telemetry="australis-tour-firstrun-36-release-nav">
+    <header role="banner">
+      <div class="logo"></div>
+      <div class="stage">
+        <h1>{{ _('Welcome to Firefox') }}</h1>
+        <p>{{ _('Committed to you, your privacy and an open Web.') }}</p>
+      </div>
+    </header>
 
-{% block tour_content %}
+    <noscript>
+      <p>{{ _('Please turn on JavaScript to display this page correctly.') }}</p>
+    </noscript>
+
+    <article class="promo">
+      <div class="promo-copy">
+        <h2>{{ _('Get to know Hello') }}</h2>
+        <p>{{ _('Firefox Hello is the easiest way to connect with friends and family for free over video.') }}</p>
+        <a id="learn-more" href="{{ url('firefox.hello') }}" class="button-flat">{{ _('Learn more') }}</a>
+        <p id="powered-by">{{ _('Powered by %s')|format(high_res_img('firefox/hello/tef-logo.png', {'alt': 'Telefonica', 'width': '106', 'height': '29'})) }}</p>
+      </div>
+      <div class="promo-media">
+        {% include 'firefox/includes/hello-animation.html' %}
+      </div>
+    </article>
+
+  </article>
+  {{ email_newsletter_form() }}
+
   <div id="ui-tour" tabindex="-1" aria-expanded="false">
     <div class="cta">
       <button type="button" aria-controls="ui-tour">{{ _('Start browsing') }}</button>
@@ -146,9 +172,7 @@ data-step4="{{ _('4/4') }}"
       </div>
     </div>
   </div>
-{% endblock %}
 
-{% block tour_mask %}
   <div id="ui-tour-mask" tabindex="-1">
     <div class="mask-inner">
       <div class="logo"></div>
@@ -160,12 +184,20 @@ data-step4="{{ _('4/4') }}"
   </div>
 {% endblock %}
 
-{% block noscript %}
-  <noscript>
-    <p>{{ _('Please turn on JavaScript to display this page correctly.') }}</p>
-  </noscript>
+{% block email_form %}{% endblock %}
+{% block site_footer %}
+  <footer role="contentinfo">
+    <ul>
+      <li><a href="{{ url('firefox.desktop.index') }}" class="more">{{ _('Firefox Features') }}</a></li>
+      <li><a href="https://support.mozilla.org/products/firefox" class="more">{{ _('Firefox Help') }}</a></li>
+    </ul>
+    <ul>
+      <li><a href="{{ url('legal.index') }}">{{ _('Legal') }}</a></li>
+      <li><a href="{{ url('privacy') }}">{{ _('Privacy') }}</a></li>
+    </ul>
+  </footer>
 {% endblock %}
 
-{% block aside_content %}
-  {{ email_newsletter_form() }}
+{% block js %}
+  {% javascript 'firefox_tour' %}
 {% endblock %}
