--- a/bedrock/teach/templates/teach/smarton/surveillance.html
+++ b/bedrock/teach/templates/teach/smarton/surveillance.html
@@ -261,8 +261,7 @@
             <div class="col">
               <h5>{{ _('Android') }}</h5>
               <ul>
-                <li><a href="https://play.google.com/store/apps/details?id=org.thoughtcrime.securesms" class="go">{{ _('TextSecure') }}</a></li>
-                <li><a href="https://play.google.com/store/apps/details?id=org.thoughtcrime.redphone" class="go">{{ _('Redphone') }}</a></li>
+                <li><a href="https://play.google.com/store/apps/details?id=org.thoughtcrime.securesms" class="go">{{ _('Signal') }}</a></li>
               </ul>
             </div>
 
