Bug 1237282 - Broken links on governance pages due to protocol relative URLs

--- a/bedrock/mozorg/templates/mozorg/about/governance/roles.html
+++ b/bedrock/mozorg/templates/mozorg/about/governance/roles.html
@@ -69,7 +69,7 @@
 <h2>{{_('Ultimate Decision-Makers')}}</h2>
 
 {% trans
-	model_url="//fringe.davesource.com/Fringe/Computers/Philosophy/Homesteading_The_Noosphere/homesteading-15.html" %}
+	model_url="http://fringe.davesource.com/Fringe/Computers/Philosophy/Homesteading_The_Noosphere/homesteading-15.html" %}
 <p>The ultimate decision-maker(s) are trusted members of the community who have the final say in the case of disputes. This is a <a href="{{ model_url }}">model</a> followed by many successful open source projects, although most of those communities only have one person in this role, and they are sometimes called the "benevolent dictator". Mozilla has evolved to have two people in this role - Brendan Eich has the final say in any technical dispute and Mitchell Baker has the final say in any non-technical dispute. This has been the case since 1998 for Brendan and 1999 for Mitchell.</p>
 {% endtrans %}
 {% endblock %}
