--- a/bedrock/firefox/templates/firefox/win10-welcome.html
+++ b/bedrock/firefox/templates/firefox/win10-welcome.html
@@ -48,7 +48,9 @@
     <h1>{% block main_headline %}{{ self.page_title() }}{% endblock %}</h1>
   </header>
   <section class="firefox-default-cta hidden">
-    <button id="set-default" type="button" class="button-flat-dark">{{ _('Let’s do it') }}</button>
+    {% if l10n_has_tag('win10_button_update') %}
+      <button id="set-default" type="button" class="button-flat-dark">{{ _('Let’s do it') }}</button>
+    {% endif %}
     <h2>{{ _('Make Firefox your default in 3 easy steps:') }}</h2>
     <ol>
       {% if l10n_has_tag('win10_button_update') %}
@@ -59,6 +61,9 @@
       <li>{{ _('Scroll down to “Web browser”') }}</li>
       <li>{{ _('Choose Firefox') }}</li>
     </ol>
+    {% if not l10n_has_tag('win10_button_update') %}
+      <button id="set-default" type="button" class="button-flat-dark">{{ _('Let’s do it') }}</button>
+    {% endif %}
   </section>
   <section class="firefox-learn-links">
     <ul>
