Fix bug 1238686 - Add Katharina Borchert to Leadership page
and remove Darren Herman

--- a/bedrock/foundation/templates/foundation/mocosc.html
+++ b/bedrock/foundation/templates/foundation/mocosc.html
@@ -42,6 +42,7 @@
   <ul>
     <li><a href="https://blog.mozilla.org/press/bios/mitchell-baker/">Mitchell Baker, {{ _('Executive Chairwoman') }}</a></li>
     <li><a href="https://blog.mozilla.org/press/bios/chris-beard/">Chris Beard, {{ _('CEO') }}</a></li>
+    <li><a href="https://blog.mozilla.org/press/bios/katharina-borchert/">Katharina Borchert, {{ _('Chief Innovation Officer') }}</a></li>
     <li><a href="https://blog.mozilla.org/press/bios/david-bryant/">David Bryant, {{ _('Interim CTO and VP, Platform Engineering') }}</a></li>
     <li><a href="https://blog.mozilla.org/press/bios/jim-cook/">Jim Cook, {{ _('Chief Finance Officer') }}</a></li>
     <li><a href="https://blog.mozilla.org/press/bios/denelle-dixon-thayer/">Denelle Dixon-Thayer, {{ _('Chief Legal and Business Officer') }}</a></li>
