--- a/bedrock/mozorg/templates/mozorg/about/leadership.html
+++ b/bedrock/mozorg/templates/mozorg/about/leadership.html
@@ -60,6 +60,20 @@
       </li>
 
       <li class="vcard" itemscope itemtype="http://schema.org/Person">
+        <a class="url" itemprop="url" href="https://blog.mozilla.org/press/bios/katharina-borchert/">
+          <img class="photo" itemprop="image" alt="" src="{{ static('img/mozorg/about/leadership/katharina-borchert.jpg') }}">
+          <span class="fn" itemprop="name">Katharina Borchert</span>
+        </a>
+        <span class="title" itemprop="jobTitle">{{ _('Chief Innovation Officer') }}</span>
+        <span class="note">{{ _('Steering Committee') }}</span>
+
+        <ul class="elsewhere">
+          <li><a class="url twitter" itemprop="url" href="https://twitter.com/lyssaslounge">@lyssaslounge</a></li>
+          <li><a class="url book" itemprop="url" href="https://mozillians.org/u/Katharina/">{{ _('Mozillians profile') }}</a></li>
+        </ul>
+      </li>
+
+      <li class="vcard" itemscope itemtype="http://schema.org/Person">
         <a class="url" itemprop="url" href="https://blog.mozilla.org/press/bios/david-bryant/">
           <img class="photo" itemprop="image" alt="" src="{{ static('img/mozorg/about/leadership/david-bryant.jpg') }}">
           <span class="fn" itemprop="name">David Bryant</span>
@@ -166,20 +180,6 @@
         <ul class="elsewhere">
           <li><a class="url twitter" itemprop="url" href="https://twitter.com/alliesuz">@alliesuz</a></li>
           <li><a class="url book" itemprop="url" href="https://mozillians.org/u/abanks">{{ _('Mozillians profile') }}</a></li>
-        </ul>
-      </li>
-
-      <li class="vcard" itemscope itemtype="http://schema.org/Person">
-        <a class="url" itemprop="url" href="https://blog.mozilla.org/press/bios/darren-herman/">
-          <img class="photo" itemprop="image" alt="" src="{{ static('img/mozorg/about/leadership/darren-herman.jpg') }}">
-          <span class="fn" itemprop="name">Darren Herman</span>
-        </a>
-        <span class="title" itemprop="jobTitle">{{ _('VP, Content Services') }}</span>
-
-        <ul class="elsewhere">
-          <li><a class="url twitter" itemprop="url" href="https://twitter.com/dherman76">@dherman76</a></li>
-          <li><a class="url website" itemprop="url" href="http://www.darrenherman.com">darrenherman.com</a></li>
-          <li><a class="url book" itemprop="url" href="https://mozillians.org/u/daherman/">{{ _('Mozillians profile') }}</a></li>
         </ul>
       </li>
 
@@ -386,7 +386,7 @@
         </a>
       </li>
       <li class="vcard" itemscope itemtype="http://schema.org/Person">
-        <a class="url" itemprop="url" href="https://twitter.com/lyssaslounge">
+        <a class="url" itemprop="url" href="https://blog.mozilla.org/press/bios/katharina-borchert/">
           <img class="photo" itemprop="image" alt="" src="{{ static('img/mozorg/about/leadership/katharina-borchert.jpg') }}">
           <span class="fn" itemprop="name">Katharina Borchert</span>
         </a>
