Fix bug 1238687 - Decommission Privacy Tips page
Redirect to SmartOn landing

--- a/bedrock/mozorg/templates/mozorg/about/manifesto.html
+++ b/bedrock/mozorg/templates/mozorg/about/manifesto.html
@@ -141,8 +141,8 @@
                 <section>
                   <h4>{{ _('Learn more') }}</h4>
                   <ul class="resources">
-                    <li><a href="{{ url('privacy.privacy-day') }}">{{ _('See how Mozilla works to put your privacy first') }}</a></li>
-                    <li><a href="https://blog.mozilla.org/privacy/">{{ _('Read about developments in privacy and data safety') }}</a></li>
+                    <li><a href="{{ url('teach.smarton.index') }}">{{ _('See how Mozilla works to put your privacy first') }}</a></li>
+                    <li><a href="https://blog.mozilla.org/netpolicy/">{{ _('Read about developments in privacy and data safety') }}</a></li>
                     <li><a href="https://webmaker.org/resources/literacy/weblit-Security">{{ _('Learn more about how to protect yourself online') }}</a></li>
                   </ul>
                   <ul class="videos">
