--- a/bedrock/mozorg/templates/mozorg/home/home.html
+++ b/bedrock/mozorg/templates/mozorg/home/home.html
@@ -153,7 +153,7 @@
         </li>
       {% else %}
         <li id="promo-2" class="item promo-small-landscape privacy">
-          <a class="panel-link" href="{{ url('privacy.privacy-day') }}" data-promotion-id="promo-2" data-promotion-name="Understand your privacy online" data-promotion-class="promo-small-landscape" data-promotion-type="tile">
+          <a class="panel-link" href="{{ url('teach.smarton.index') }}" data-promotion-id="promo-2" data-promotion-name="Understand your privacy online" data-promotion-class="promo-small-landscape" data-promotion-type="tile">
             <h2>{{ _('Understand your privacy online') }}</h2>
           </a>
         </li>
