Revert "Fix Bug 1226476 - Convert android/all/ to the same format as desktop uses"

--- a/bedrock/firefox/templates/firefox/android/faq.html
+++ b/bedrock/firefox/templates/firefox/android/faq.html
@@ -59,10 +59,10 @@
           and data, for instance with <a href="https://support.mozilla.org/kb/how-do-i-turn-do-not-track-feature-mobile">Do Not Track</a>.</dd>
         {% endtrans %}
 
-        {% trans url=firefox_url('android', 'sysreq') %}
+        {% trans %}
           <dt>Is Firefox available for my platform or device?</dt>
           <dd>Firefox for Android works with Android phones version 2.2 (Froyo)
-          and above. <a href="{{ url }}">Visit our list of supported platforms and devices</a>.</dd>
+          and above. <a href="https://support.mozilla.org/kb/will-firefox-work-my-mobile-device">Visit our list of supported platforms and devices</a>.</dd>
         {% endtrans %}
 
         {% trans url=settings.GOOGLE_PLAY_FIREFOX_LINK %}
