--- a/bedrock/firefox/templates/firefox/releases/release-notes.html
+++ b/bedrock/firefox/templates/firefox/releases/release-notes.html
@@ -253,7 +253,7 @@
       <div class="container">
         <div class="all-download">
           <p class="message">{{ _('Download the latest version of Firefox') }}</p>
-          <a rel="external" href="{{ firefox_url('desktop', 'all') }}">{{ _('All Firefox downloads') }}</a>
+          <a rel="external" href="{{ url('firefox.all') }}">{{ _('All Firefox downloads') }}</a>
         </div>
         <div class="download-buttons">
           <div class="firefox-latest-cta">
