--- a/bedrock/mozorg/templates/mozorg/about/history-details.html
+++ b/bedrock/mozorg/templates/mozorg/about/history-details.html
@@ -136,7 +136,7 @@
         collaborating in open source projects and that great end user products
         can be produced as open source software.
       {% endtrans %}
-      {% trans all=firefox_url('desktop', 'all') %}
+      {% trans all=url('firefox.all') %}
         More people than ever before are using the Internet and are
         experiencing it <a href="{{ all }}">in their own language</a>.
       {% endtrans %}
