--- a/bedrock/firefox/templates/firefox/all.html
+++ b/bedrock/firefox/templates/firefox/all.html
@@ -3,14 +3,7 @@
 
 {% block extra_meta %}<meta name="robots" content="noindex">{% endblock %}
 
-{% block page_title %}
-  {% if platform == 'android' %}
-    {{ _('Download %s for Android in your language')|format(channel_label) }}
-  {% else %}
-    {{ _('Download %s in your language')|format(channel_label) }}
-  {% endif %}
-{% endblock %}
-
+{% block page_title %}{{ _('Download %s in your language')|format(channel_name) }}{% endblock %}
 {% block body_id %}firefox-all{% endblock %}
 
 {% block page_desc %}
@@ -34,7 +27,7 @@
 {% endblock %}
 
 {% block body_class -%}
-  sky {{ platform }} {{ channel }} {% if channel == 'alpha' %}blueprint{% endif %}
+  sky firefox-all-{{ channel }} {% if channel == 'alpha' %}blueprint{% endif %}
 {% endblock %}
 
 {% block page_css %}
@@ -50,7 +43,7 @@
 {% endblock %}
 
 {% block site_header_share %}
-  {% if platform == 'desktop' and channel == 'release' -%}
+  {% if channel == 'release' -%}
     {% set share_urls = { 'twitter': 'http://mzl.la/1IMdR5T', 'googleplus': 'http://mzl.la/1y7TgOf', 'facebook': 'http://mzl.la/1ATF965' } -%}
     {% set share_text = _('Thanks to contributions of Mozilla community members around the world, Firefox is available in 80 languages:') %}
     {{ share_cta(_('Share'), share_urls, share_text, 'spread-firefox-all', 'sky mini') }}
@@ -61,8 +54,9 @@
   <header id="main-feature">
     <h1>{{ self.page_title()  }}</h1>
     <h2>{{ self.page_desc() }}</h2>
-    <p><a class="sysreq" href="{{ firefox_url(platform, 'sysreq', channel) }}">{{ _('Check the system requirements') }}</a><br />
-    <a class="sysreq" href="{{ firefox_url(platform, 'notes', channel) }}">{{ _('Release notes') }}</a></p>
+    <p><a class="sysreq" href="{{ firefox_url('desktop', 'sysreq', channel) }}">{{ _('Check the system requirements') }}</a><br />
+    <a class="sysreq" href="{{ firefox_url('desktop', 'notes', channel) }}">{{ _('Release notes') }}</a>
+    </p>
   </header>
 
   {{ build_search_box(query, full_builds, test_builds) }}
@@ -83,13 +77,13 @@
     {% if full_builds_next %}
       <div class="esr-builds-table pager-page" id="builds-next">
         <div class="localized">
-          {{ build_table(platforms, full_builds_next,
+          {{ build_table(full_builds_next,
                          _('Fully localized versions')) }}
         </div>
 
         {% if test_builds_next %}
           <div class="localized-testing">
-            {{ build_table(platforms, test_builds_next,
+            {{ build_table(test_builds_next,
                            _('Localized versions in testing'),
                            _('These localizations aren’t final. We’re waiting for more feedback from the community to perfect them.')) }}
           </div>
@@ -99,13 +93,13 @@
 
       <div class="esr-builds-table pager-page" id="builds">
         <div class="localized">
-          {{ build_table(platforms, full_builds,
+          {{ build_table(full_builds,
                          _('Fully localized versions')) }}
         </div>
 
       {% if test_builds %}
         <div class="localized-testing" id="localized-testing">
-          {{ build_table(platforms, test_builds,
+          {{ build_table(test_builds,
                          _('Localized versions in testing'),
                          _('These localizations aren’t final. We’re waiting for more feedback from the community to perfect them.')) }}
         </div>
