--- a/bedrock/firefox/templates/firefox/developer.html
+++ b/bedrock/firefox/templates/firefox/developer.html
@@ -40,7 +40,7 @@
 
   <h1>{{ _('Built for those who build the Web') }}</h1>
   <h2>{{ _('The only browser made for developers like you.') }}</h2>
-  {{ download_firefox('alpha', icon=False, small=True, simple=True) }}
+  {{ download_firefox('alpha', platform='desktop', icon=False, small=True, simple=True) }}
 
   <p class="feedback-note">
     {{ _('Firefox Developer Edition automatically sends feedback to Mozilla.') }}
@@ -228,7 +228,7 @@
   <div class="container">
     <div class="dev-footer-download">
       <h3>{{ _('Choose Firefox') }}</h3>
-      {{ download_firefox('alpha', icon=False, small=True, simple=True) }}
+      {{ download_firefox('alpha', platform='desktop', icon=False, small=True, simple=True) }}
     </div>
     {# See Bug 1095176 #}
     {% if LANG.startswith('en-') %}
