--- a/bedrock/mozorg/templates/mozorg/about/leadership.html
+++ b/bedrock/mozorg/templates/mozorg/about/leadership.html
@@ -297,9 +297,23 @@
     <p>{{ _('The Mozilla Reps Council is composed of volunteer Mozillians who function as official representatives of Mozilla in their region or locale. The council provides the general vision for the Mozilla Reps Program and oversees day-to-day operations globally.') }}</p>
     <ul class="gallery">
       <li class="vcard" itemscope itemtype="http://schema.org/Person">
+        <a class="url" itemprop="url" href="https://reps.mozilla.org/u/umesh/">
+          <img class="photo" itemprop="image" alt="" src="{{ static('img/mozorg/about/leadership/umesh-agarwal.jpg') }}">
+          <span class="fn" itemprop="name">Umesh Agarwal</span>
+        </a>
+      </li>
+
+      <li class="vcard" itemscope itemtype="http://schema.org/Person">
         <a class="url" itemprop="url" href="https://reps.mozilla.org/u/rardila/">
           <img class="photo" itemprop="image" alt="" src="{{ static('img/mozorg/about/leadership/rosana-ardila.jpg') }}">
           <span class="fn" itemprop="name">Rosana Ardila</span>
+        </a>
+      </li>
+
+      <li class="vcard" itemscope itemtype="http://schema.org/Person">
+        <a class="url" itemprop="url" href="https://reps.mozilla.org/u/FaisalAziz/">
+          <img class="photo" itemprop="image" alt="" src="{{ static('img/mozorg/about/leadership/faisal-aziz.jpg') }}">
+          <span class="fn" itemprop="name">Faisal Aziz</span>
         </a>
       </li>
 
@@ -318,20 +332,6 @@
       </li>
 
       <li class="vcard" itemscope itemtype="http://schema.org/Person">
-        <a class="url" itemprop="url" href="https://reps.mozilla.org/u/ankitgadgil/">
-          <img class="photo" itemprop="image" alt="" src="{{ static('img/mozorg/about/leadership/ankit-gadgil.jpg') }}">
-          <span class="fn" itemprop="name">Ankit Gadgil</span>
-        </a>
-      </li>
-
-      <li class="vcard" itemscope itemtype="http://schema.org/Person">
-        <a class="url" itemprop="url" href="https://reps.mozilla.org/u/jsan4christ/">
-          <img class="photo" itemprop="image" alt="" src="{{ static('img/mozorg/about/leadership/san-emmanuel-james.jpg') }}">
-          <span class="fn" itemprop="name">San Emmanuel James</span>
-        </a>
-      </li>
-
-      <li class="vcard" itemscope itemtype="http://schema.org/Person">
         <a class="url" itemprop="url" href="https://reps.mozilla.org/u/michaelkohler/">
           <img class="photo" itemprop="image" alt="" src="{{ static('img/mozorg/about/leadership/michael-kohler.jpg') }}">
           <span class="fn" itemprop="name">Michael Kohler</span>
@@ -346,16 +346,16 @@
       </li>
 
       <li class="vcard" itemscope itemtype="http://schema.org/Person">
-        <a class="url" itemprop="url" href="https://reps.mozilla.org/u/bobreyes/">
-          <img class="photo" itemprop="image" alt="" src="{{ static('img/mozorg/about/leadership/robert-reyes.jpg') }}">
-          <span class="fn" itemprop="name">Robert Reyes</span>
+        <a class="url" itemprop="url" href="https://reps.mozilla.org/u/thephoenixbird/">
+          <img class="photo" itemprop="image" alt="" src="{{ static('img/mozorg/about/leadership/arturo-martinez.jpg') }}">
+          <span class="fn" itemprop="name">Arturo Martinez</span>
         </a>
       </li>
 
       <li class="vcard" itemscope itemtype="http://schema.org/Person">
-        <a class="url" itemprop="url" href="https://reps.mozilla.org/u/lasr21/">
-          <img class="photo" itemprop="image" alt="" src="{{ static('img/mozorg/about/leadership/luis-a-sanchez.jpg') }}">
-          <span class="fn" itemprop="name">Luis A. Sanchez</span>
+        <a class="url" itemprop="url" href="https://reps.mozilla.org/u/Rara/">
+          <img class="photo" itemprop="image" alt="" src="{{ static('img/mozorg/about/leadership/irayani_queencyputri.jpg') }}">
+          <span class="fn" itemprop="name">Irayani Queencyputri</span>
         </a>
       </li>
     </ul>
