[fix bug 1208495] Remove unused newsletter macro.

--- a/media/css/mozorg/home/home.less
+++ b/media/css/mozorg/home/home.less
@@ -678,7 +678,6 @@ h1, h2, h3, h4, h5, h6 {
     background: #f6f4ec;
 }
 
-#mozorg-newsletter-form,
 #newsletter-form {
     width: @widthSquareGrid_8 / 2;
     margin: 0 auto;
@@ -885,12 +884,9 @@ h1, h2, h3, h4, h5, h6 {
         }
     }
 
-    #mozorg-newsletter-form,
-    #newsletter-form {
-        h3 {
-            width: 100%;
-            padding: (@baseLine * 3) 0 (@baseLine * 2) 0;
-        }
+    #newsletter-form h3 {
+        width: 100%;
+        padding: (@baseLine * 3) 0 (@baseLine * 2) 0;
     }
 }
 
@@ -996,7 +992,6 @@ h1, h2, h3, h4, h5, h6 {
         }
     }
 
-    #mozorg-newsletter-form,
     #newsletter-form {
         .form-title {
             float: none;
@@ -1052,7 +1047,6 @@ h1, h2, h3, h4, h5, h6 {
         padding: 0;
     }
 
-    #mozorg-newsletter-form,
     #newsletter-form {
         width: 100%;
 
@@ -1284,11 +1278,8 @@ h1, h2, h3, h4, h5, h6 {
         }
     }
 
-    #mozorg-newsletter-form,
-    #newsletter-form {
-        h3 {
-            .font-size(42px);
-        }
+    #newsletter-form h3 {
+        .font-size(42px);
     }
 }
 
