Fix Bug 1238851 - Decommission Persona pages

--- a/bedrock/styleguide/templates/styleguide/websites/sandstone-examples.html
+++ b/bedrock/styleguide/templates/styleguide/websites/sandstone-examples.html
@@ -21,7 +21,7 @@
   <div>
   <a href="{{ url('mozorg.home') }}"><img src="{{ static('img/styleguide/websites/sandstone/examples/mozillaorg.png') }}" alt="Mozilla.org screenshot" /></a>
   <a href="{{ url('firefox.new') }}"><img src="{{ static('img/styleguide/websites/sandstone/examples/firefox.png') }}" alt="Firefox website screenshot" /></a>
-  <a href="{{ url('persona.persona') }}"><img src="{{ static('img/styleguide/websites/sandstone/examples/persona.png') }}" alt="Persona website screenshot" /></a>
+  <a href="https://developer.mozilla.org/Persona"><img src="{{ static('img/styleguide/websites/sandstone/examples/persona.png') }}" alt="Persona website screenshot" /></a>
   <a href="https://air.mozilla.org/"><img src="{{ static('img/styleguide/websites/sandstone/examples/airmozilla.png') }}" alt="Air Mozilla screenshot" /></a>
   <a href="https://mozillalabs.com/"><img src="{{ static('img/styleguide/websites/sandstone/examples/labs.png') }}" alt="Mozilla Labs screenshot" /></a>
   <a href="https://webfwd.org/"><img src="{{ static('img/styleguide/websites/sandstone/examples/webfwd.png') }}" alt="WebFWD screenshot" /></a>
