Add functional tests for Firefox iOS page

--- a/media/css/firefox/ios.less
+++ b/media/css/firefox/ios.less
@@ -624,7 +624,8 @@ a.go {
     top: -30px;
 }
 
-.send-to-device {
+.send-to-device,
+.send-to {
     display: none;
 }
 
@@ -791,4 +792,3 @@ html[lang|="en"] {
       margin-top: 10px;
   }
 }
-
